--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
         <h2 class="mb-5">Portfolio</h1>
         <center>
             <img src="img/tenori.jpg" width="500px">
-            <img src="img/image4.jpeg" width="500px"><br>
-            <img src="img/image4.jpeg" width="500px"><br>
-            <img src="img/image4.jpeg" width="500px"><br>
+            <img src="img/swimcoachjpg" width="500px"><br>
+            <img src="img/education.jpg" width="500px"><br>
+            <img src="img/education.jpg" width="500px"><br>
         </center>
       </div>
     </section>
